syntax = "proto3";
package api_def;
option go_package = "/api_def";
import "kk_etcd_models/pb_service_kk_etcd.proto";
import "kk_etcd_models/pb_service_registration.proto";

//list server
message ServiceList {
  message Input {
    kk_etcd_models.PBServiceType ServiceType = 1;
    string  ServiceName = 2;
  }

  message Output {
    kk_etcd_models.PBListService ServiceList = 1;
  }
}