syntax = "proto3";
package kk_etcd_models;
//import "google/protobuf/any.proto";
option go_package = "./;kk_etcd_models";

// protoc -I=. --go_out=./ *.proto


// protoc -I=. --dart_out=./dart *.proto

message PBServer {
  string ServiceName = 1;
  string ServiceAddr = 2;
}

message PBListServer  {
  repeated PBServer ListServer = 1;
}